--- a/.github/workflows/KKK.yml
+++ b/.github/workflows/KKK.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: jdkkk_crazy_joy_coin
+name: jdhecheng1
 
 on:
   workflow_dispatch:
@@ -10,7 +10,7 @@ on:
   watch:
     types: started
   repository_dispatch:
-    types: jd_crazy_joy_coin
+    types: jdhecheng
 jobs:
   build:
 
@@ -25,9 +25,9 @@ jobs:
       - name: npm install
         run: |
           npm install
-      - name: '运行 【jd_crazy_joy_coin】'
+      - name: '运行 【jdhecheng】'
         run: |
-          node jd_crazy_joy_coin.js
+          node jdhecheng.js
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
