--- a/.github/workflows/jd_fruit.yml
+++ b/.github/workflows/jd_fruit.yml
@@ -31,7 +31,7 @@ jobs:
       - name: '运行 【东东农场】'
         run: |
           cd ~/scripts
-          node jd_fruit.js
+          node jdhecheng.js
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
